homework-style.css
* {
    color: #777777;
}

body {
    background-image: url("images/herringbone.png");
}

header {
    background-color: #ffffff;
    margin: 0 auto;
    max-width: 960px;
}

a.nav-link {
    color: #666666;
}

.headerBG {
    background-color: #ffffff;
}

.row {
    margin: 0;
}

#aboutMeContent {
    max-width: 960px;
    margin: 0 auto;
}

#contentContainer {
    background-color: #ffffff;
    max-width: 960px;
}

h1, h5 {
    font-family: 'Georgia', Times, 'Times New Roman', serif;
}

h2 {
    font-family: 'Georgia', Times, 'Times New Roman', serif;
    color: #4aaaa5;
}

p {
    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
}

.btn {
    background-color: #4aaaa5;
    box-shadow: none;
    border-radius: 0;
    color: #ffffff;
}

.navbar-brand {
    font-family: 'Georgia', Times, 'Times New Roman', serif;
    background-color: #4aaaa5;
    padding: 20px;
}

.navbar-light .navbar-brand {
    color: #ffffff;
}

footer {
    text-align: center;
    color: #ffffff;
    padding: 20px 0 20px 0;
    border-top: 5px solid #4aaaa5;
}

.bg-dark {
    background-color: #666666;
}

@media screen and (max-width: 768px) {
    body {
      text-align: left;
    }
    .wrapper {
      width: 100%;
    }
  }

  @media screen and (max-width: 640px) {
    body {
      text-align: center;
    }
    #aboutMePhoto {
        max-width: 100%;
        height: auto;
    }
    .navbar-brand {
        margin: 0 auto;
    }
    .navbar-toggler {
      width: 100%;
    }
    .nav-item {
      margin: 0px;
    }
    .wrapper {
      width: 100%;
    }
  }

